[package]
name = "steam_activity_feed_gephi_exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
mongodb = { version = "2.8.2", features = ["tokio-runtime", "bson-chrono-0_4"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
csv = "1.3"
futures = "0.3" # For StreamExt trait (e.g., cursor.try_next())
serde_json = "1.0" # For handling JSON data, especially for Mixed types
chrono = { version = "0.4", features = ["serde"] } # For date and time
colored = "2.0" # For colorful terminal output
thiserror = "1.0" # For error handling
